[tool.poetry]
name = "hltv_async_api"
version = "0.8.2"
authors = ["Akim Slys <akimslys2003@gmail.com>"]
description = "An unofficial asynchronous HLTV API Wrapper for Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
Homepage = "https://github.com/akimerslys/aiohltv"
Issues = "https://github.com/akimerslys/aiohltv/issues"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.0.1"
aiohttp = "^3.0.1"
pytz = "*"
setuptools = "*"
lxml = "^5.0.0"